tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier8UV-AAAAAAAAAAAAAAAAAAAALQ==__TimeforAnotherRe-AAAAAAAAAAAAAAAAAAAEsw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1203,
  "prerequisites": [
    1198
  ],
  "properties": {
    "auto_claim": false,
    "desc": "While one reactor is nice and all, why not make another? This time you can use the MK3 americium recipe to make it easier.\n\nCosting just 1 ingot of Plutonium, and 2 cells of hydrogen, this recipe is much easier and faster than the MK2 version. By making americium plasma, then putting it through a turbine, you will get americium in the liquid state. You will need at least 132 plates for the controller and the fusion machine casings.\n\nPlus, free power!",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Time for Another Reactor",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1198
  ],
  "rewards": [],
  "tasks": []
}
