tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier8UV-AAAAAAAAAAAAAAAAAAAALQ==__UpgradingtheReac-AAAAAAAAAAAAAAAAAAAErg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1198,
  "prerequisites": [
    2628,
    2633,
    2623
  ],
  "properties": {
    "auto_claim": false,
    "desc": "A MK II is nice, but why not make a MK III? This time you need UV+ energy hatches, as well as the Fusion Machine Casing MK II.\n\nEach energy hatch has an energy capacity of 40M EU and draws up to 32768 EU/t. That means it can handle start costs up to 640M EU and power consumption up to 524288 EU/t.\n\nThe MK III reactor also grants a 2/2 perfect overclock for every machine tier above the minimum recipe tier.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Upgrading the Reactor",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2628,
    2633,
    2623
  ],
  "rewards": [],
  "tasks": []
}
